# klattice

./: .gitignore  .gitmodules  BUILD.bazel  CLAUDE.md  Cargo.toml  Duckdb.Dockerfile  README.org  WORKSPACE  buf.gen.yaml  build.gradle  docker-compose.yml  duckdb_serve.py  gradle.properties  package-lock.json  settings.gradle
cli/: build.gradle.kts
cli/src/main/java/klattice/api/: Main.java
connector/: Cargo.toml  Dockerfile  build.docker.rs  build.rs
connector/src/: main.rs
core/: build.gradle.kts
core/src/main/java/klattice/schema/: SchemaRegistryService.java
core/src/main/proto/: exec.proto  messages.proto  oracle.proto  plan.proto  query.proto
core/src/main/resources/: application.properties
core/src/test/java/klattice/endpoint/: SchemaRegistryResourceTest.java
core/src/test/resources/: application.properties
host/: build.gradle.kts
host/src/main/docker/: Dockerfile.jvm
host/src/main/java/klattice/endpoint/: ParquetExportResource.java  SysTableExportResource.java
host/src/main/java/klattice/file/: AvroParquetExport.java  CsvToAvroParquetExporter.java  KafkaExporter.java
host/src/main/resources/: application.properties
jvm-api/: build.gradle
jvm-api/src/main/proto/: exec.proto  messages.proto  plan.proto  query.proto  registry.proto
jvm-core/: build.gradle
jvm-core/src/integrationTest/java/klattice/duckdb/: DuckDbRestServiceTest.java
jvm-core/src/integrationTest/java/klattice/endpoint/: SchemaRegistryResourceTest.java
jvm-core/src/integrationTest/java/klattice/facade/: OracleGrpcServiceTest.java  OracleTest.java
jvm-core/src/integrationTest/java/klattice/plan/: PlannerServiceGrpcTest.java
jvm-core/src/integrationTest/resources/: application.properties
jvm-core/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
jvm-core/src/main/java/klattice/: Main.java
jvm-core/src/main/proto/: messages.proto  oracle.proto
jvm-core/src/main/resources/: application.properties  postgres_scalar_functions.yml
jvm-core/src/test/resources/: application.properties
jvm-server/: build.gradle
jvm-server/src/main/java/klattice/: Main.java
pkg/api/: Cargo.toml  build.rs
pkg/api/proto/: api.proto  buf.yaml
pkg/api/proto/klattice/: api.proto  hub.proto  plan.proto
pkg/api/src/: lib.rs  version.in
pkg/hub/: Cargo.toml
pkg/hub/src/: main.rs
pkg/plan/: Cargo.toml
pkg/plan/src/: main.rs
planner/: build.gradle.kts
planner/src/main/java/klattice/: GrpcExceptionHandlerProvider.java  Main.java
planner/src/main/resources/: application.properties  postgres_scalar_functions.yml
planner/src/test/resources/: application.properties
src/integrationTest/java/klattice/plan/: PlannerServiceGrpcTest.java
src/main/: proto
src/main/java/klattice/: Main.java
src/main/java/klattice/api/: Main.java  QueryServiceGrpc.java  SchemaServiceGrpc.java
src/main/java/klattice/calcite/: BuiltinTableCategory.java  BuiltinTables.java  DuckDbDialect.java  FunctionCategory.java  FunctionDefs.java  FunctionNames.java  FunctionShapes.java  SchemaHolder.java
src/main/java/klattice/dialect/: DucksDbDialect.java
src/main/java/klattice/duckdb/: DuckDbRestService.java  DuckDbService.java
src/main/java/klattice/endpoint/: KafkaExporter.java  ParquetBufferedWriter.java  ParquetExportResource.java  RangeExposer.java  SysTableExportResource.java
src/main/java/klattice/exec/: ExecGrpcService.java  SqlIdentifierResolver.java
src/main/java/klattice/facade/: OracleGrpcService.java
src/main/java/klattice/file/: AvroParquetExport.java  CsvToAvroParquetExporter.java  ParquetBufferedWriter.java
src/main/java/klattice/plan/: Converter.java  CostEstimator.java  Enhance.java  Estimator.java  Expand.java  InvocationExtractor.java  Partitioner.java  PlannerServiceGrpc.java  RePlanner.java  Renamer.java  Replanner.java  Stats.java  Unify.java
src/main/java/klattice/query/: Prepare.java  QueryServiceGrpc.java
src/main/java/klattice/schema/: BuiltinTableCategory.java  BuiltinTables.java  SchemaDescriptorFactory.java  SchemaDescriptorInspector.java  SchemaEntity.java  SchemaFactory.java  SchemaHolder.java  SchemaRegistryResource.java  SchemaRegistryService.java
src/main/java/klattice/store/: SchemaRegistryStoreSource.java
src/main/java/klattice/substrait/: MyScalarFunctionConverter.java  Shared.java  SubstraitToCalciteConverter.java
src/main/java/klattice/wire/: NettyPgWireServer.java
src/main/proto/: api.proto  messages.proto  plan.proto  query.proto  resolve.proto  status.proto
src/main/resources/: application.properties  log4j2.properties  postgres_scalar_functions.yml
src/main/resources/tables/: _magic_values.csv
src/test/java/klattice/facade/: OracleGrpcServiceTest.java
src/test/java/klattice/plan/: EnhanceTest.java  ExpandTest.java  PlannerServiceGrpcTest.java
src/test/java/klattice/query/: PrepareTest.java  QueryServiceGrpcTest.java
wire/: build.gradle.kts
(+214 files in other folders)
