[package]
name = "klattice-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
build = "build.rs"

[dependencies]
termcolor = "1.2"
anyhow = { version = "1.0", default-features = true }
tokio = { version = "1.29.1", features = ["full"] }
tonic = "0.9.2"
tonic-health = "0.9.2"
tonic-types = "0.9.2"
prost = "0.11.9"
prost-types = "0.11"
arrow-flight = "42.0.0"
substrait = "0.11.0"

[build-dependencies]
tonic-build = "0.9.2"
git2 = { version = "0.17.1", default-features = false }
heck = "0.4"
pbjson-build = { version = "0.5", optional = false }
prettyplease = "0.2.4"
prost-build = { version = "0.11", default-features = false }
prost-types = "0.11"
prost-wkt-build = { version = "0.4", optional = false }
protobuf-src = { version = "1", optional = false }
schemars = "0.8"
semver = "1"
syn = "2.0.11"
typify = "0.0.13"
glob = "0.3.1"