[package]
name = "klattice-plan"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlparser = "0.35.0"
termcolor = "1.2"
anyhow = { version = "1.0", default-features = true }
tokio = { version = "1.29.1", features = ["full"] }
tonic = "0.9.2"
tonic-health = "0.9.2"
tonic-types = "0.9.2"
arrow-flight = "42.0.0"